syntax = "proto3";

package mongo;

enum GENDER {
    MALE = 0;
    FEMALE = 1;
    UNKNOWN = 2;
}

message UserInfoDto {
    optional string birthdayDate = 1;

    optional GENDER gender = 2;
}

message Code {
    string code = 1;
}

message CreateUserDto {
    string email = 1;

    string password = 2;

    UserInfoDto info = 3;
    
}

service RegisterController {
    rpc createInCacheUser (CreateUserDto) returns (Code) {}
    rpc returnByTokenUser (Code) returns (CreateUserDto) {}
}

message Payload {
    string userId = 1;
    string email = 2;
    repeated string roles = 3;
    optional string token = 4;
}

message RefreshToken {
    string token = 1;
    optional string expires = 2;
}

message UserId {
    string userId = 1;
}

message Tokens {
    string accessToken = 1;
    RefreshToken refreshToken = 2; 
}

message MessageDeleteToken {
    string message = 1;
}

service AuthController {
    rpc createTokens (Payload) returns (Tokens) {}
    rpc checkToken (RefreshToken) returns (UserId) {}
    rpc refreshTokens (Payload) returns (Tokens) {}
    rpc deleteTokens (RefreshToken) returns (MessageDeleteToken) {}
}